test/NUITestSample/NUIUbuntuTest/tizenfx-stub-devel-master/src/app_info.h


typedef enum {
        APP_INFO_APP_COMPONENT_TYPE_UI_APP,       
        APP_INFO_APP_COMPONENT_TYPE_SERVICE_APP,  
        APP_INFO_APP_COMPONENT_TYPE_WIDGET_APP,   
        APP_INFO_APP_COMPONENT_TYPE_WATCH_APP,    
} app_info_app_component_type_e;
typedef struct app_info_s *app_info_h;
typedef bool (*app_info_metadata_cb) (const char *metadata_key, const char *metadata_value, void *user_data);
int app_info_create(const char *app_id, app_info_h *app_info);
int app_info_destroy(app_info_h app_info);
int app_info_get_app_id(app_info_h app_info, char **app_id);
int app_info_get_exec(app_info_h app_info, char **exec);
int app_info_get_label(app_info_h app_info, char **label);
int app_info_get_localed_label(const char *app_id, const char *locale, char **label);
int app_info_get_icon(app_info_h app_info, char **path);
int app_info_get_package(app_info_h app_info, char **package);
int app_info_get_type(app_info_h app_info, char **type);
int app_info_get_app_component_type(app_info_h app_info, app_info_app_component_type_e *type);
int app_info_foreach_metadata(app_info_h app_info, app_info_metadata_cb callback, void *user_data);
int app_info_is_nodisplay(app_info_h app_info, bool *nodisplay);
int app_info_is_equal(app_info_h lhs, app_info_h rhs, bool *equal);