test/NUITestSample/NUIUbuntuTest/tizenfx-stub-devel-master/src/app_manager.h


typedef enum {
  APP_MANAGER_EVENT_ENABLE_APP = 0,   
  APP_MANAGER_EVENT_DISABLE_APP,    
} app_manager_event_type_e;
typedef enum {
  APP_MANAGER_EVENT_STATE_STARTED = 0,  
  APP_MANAGER_EVENT_STATE_COMPLETED,    
  APP_MANAGER_EVENT_STATE_FAILED,       
} app_manager_event_state_e;
typedef struct app_manager_event_s *app_manager_event_h;
typedef void (*app_manager_event_cb) (
    const char *type,
    const char *app_id,
    app_manager_event_type_e event_type,
    app_manager_event_state_e event_state,
    app_manager_event_h handle,
    void *user_data);
int app_manager_get_external_shared_data_path(const char *app_id, char **path) TIZEN_DEPRECATED_API;
int app_manager_event_create(app_manager_event_h *handle);
int app_manager_event_set_status(app_manager_event_h handle, int status_type);
int app_manager_set_event_cb(app_manager_event_h handle,
    app_manager_event_cb callback,
    void *user_data);
int app_manager_unset_event_cb(app_manager_event_h handle);
int app_manager_event_destroy(app_manager_event_h handle);