test/NUITestSample/NUIUbuntuTest/tizenfx-stub-devel-master/src/app_context.h


typedef struct app_context_s *app_context_h;
typedef enum {
  APP_STATE_UNDEFINED, 
  APP_STATE_FOREGROUND, 
  APP_STATE_BACKGROUND, 
  APP_STATE_SERVICE, 
  APP_STATE_TERMINATED, 
} app_state_e;
int app_context_destroy(app_context_h app_context);
int app_context_get_app_id(app_context_h app_context, char **app_id);
int app_context_get_pid(app_context_h app_context, pid_t *pid);
int app_context_get_package_id(app_context_h app_context, char **pkg_id);
int app_context_get_app_state(app_context_h app_context, app_state_e *state);
int app_context_is_terminated(app_context_h app_context, bool *terminated);
int app_context_is_equal(app_context_h lhs, app_context_h rhs, bool *equal);
int app_context_is_sub_app(app_context_h app_context, bool *is_sub_app);
int app_context_clone(app_context_h *clone, app_context_h app_context);