src/Tizen.Applications.Common/Interop/Interop.ApplicationManager.cs


        [LibraryImport(Libraries.AppManager, EntryPoint = "app_manager_get_common_shared_trusted_path", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppManagerGetCommonSharedTrustedPath(string applicationId, out string path);
        //int app_manager_get_common_shared_trusted_path (const char *appid, char **path);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_manager_get_external_shared_data_path", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppManagerGetExternalSharedDataPath(string applicationId, out string path);
        //int app_manager_get_external_shared_data_path (const char *appid, char **path);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_manager_event_create", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppManagerEventCreate(out IntPtr handle);
        //int app_manager_event_create (app_manager_event_h *handle);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_manager_event_set_status", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppManagerEventSetStatus(IntPtr handle, AppManagerEventStatusType statusType);
        //int app_manager_event_set_status (app_manager_event_h handle, int status_type);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_manager_set_event_cb", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppManagerSetEventCallback(IntPtr handle, AppManagerEventCallback callback, IntPtr userData);
        //int app_manager_set_event_cb (app_manager_event_h handle, app_manager_event_cb callback, void *user_data);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_manager_unset_event_cb", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppManagerUnSetEventCallback(IntPtr handle);
        //int app_manager_unset_event_cb (app_manager_event_h handle);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_manager_event_destroy", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppManagerEventDestroy(IntPtr handle);
        //int app_manager_event_destroy (app_manager_event_h handle);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_manager_terminate_app", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppManagerTerminateApp(IntPtr handle);
        //int app_manager_terminate_app (app_context_h app_context);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_manager_terminate_app_without_restarting", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppManagerTerminateAppWithoutRestarting(IntPtr handle);
        //int app_manager_terminate_app_without_restarting (app_context_h app_context);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_manager_get_app_context_by_instance_id", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppManagerGetAppContextByInstanceId(string applicationId, string instanceId, out IntPtr handle);
        //int app_manager_get_app_context_by_instance_id (const char *app_id, const char *instance_id, app_context_h *app_context);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_manager_attach_window", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppManagerAttachWindow(string parentAppId, string childAppId);
        //int app_manager_attach_window(const char *parent_app_id, const char *child_app_id);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_manager_detach_window", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppManagerDetachWindow(string applicationId);
        //int app_manager_detach_window(const char *app_id);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_manager_attach_window_below", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppManagerAttachWindowBelow(string parentAppId, string childAppId);
        //int app_manager_attach_window_below(const char *parent_app_id, const char *child_app_id);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_manager_request_remount_subsession", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppManagerRequestRemountSubsession(string subsessionId);
        //int app_manager_request_remount_subsession(const char *subsession_id);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_context_destroy", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppContextDestroy(IntPtr handle);
        //int app_context_destroy(app_context_h app_context)

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_context_get_app_id", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppContextGetAppId(IntPtr handle, out string applicationId);
        //int app_context_get_app_id(app_context_h app_context, char **app_id)

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_context_get_package_id", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppContextGetPackageId(IntPtr handle, out string packageId);
        //int app_context_get_package_id(app_context_h app_context, char **package_id)

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_context_get_pid", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppContextGetPid(IntPtr handle, out int processId);
        //int app_context_get_pid (app_context_h app_context, pid_t *pid)

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_context_get_app_state", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppContextGetAppState(IntPtr handle, out int state);
        //int app_context_get_app_state (app_context_h app_context, app_state_e *state)

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_context_is_terminated", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppContextIsTerminated(IntPtr handle, [MarshalAs(UnmanagedType.U1)] out bool terminated);
        //int app_context_is_terminated (app_context_h app_context, [MarshalAs(UnmanagedType.U1)] bool *terminated);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_context_is_equal", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppContextIsEqual(IntPtr first, IntPtr second, [MarshalAs(UnmanagedType.U1)] out bool equal);
        //int app_context_is_equal (app_context_h lhs, app_context_h rhs, [MarshalAs(UnmanagedType.U1)] bool *equal);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_context_is_sub_app", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppContextIsSubApp(IntPtr handle, [MarshalAs(UnmanagedType.U1)] out bool is_sub_app);
        //int app_context_is_sub_app (app_context_h app_context, [MarshalAs(UnmanagedType.U1)] bool *is_sub_app);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_context_clone", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppContextClone(out IntPtr destination, IntPtr source);
        //int app_context_clone (app_context_h *clone, app_context_h app_context);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_info_create", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppInfoCreate(string applicationId, out IntPtr handle);
        //int app_info_create (const char *app_id, app_info_h *app_info);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_info_destroy", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppInfoDestroy(IntPtr handle);
        //int app_info_destroy (app_info_h app_info);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_info_get_app_id", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppInfoGetAppId(IntPtr handle, out string applicationId);
        //int app_info_get_app_id (app_info_h app_info, char **app_id);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_info_get_exec", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppInfoGetExec(IntPtr handle, out string exec);
        //int app_info_get_exec (app_info_h app_info, char **exec);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_info_get_label", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppInfoGetLabel(IntPtr handle, out string label);
        //int app_info_get_label (app_info_h app_info, char **label);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_info_get_localed_label", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppInfoGetLocaledLabel(string applicationId, string locale, out string label);
        //int app_info_get_localed_label (const char *app_id, const char *locale, char **label);

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_info_get_icon", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppInfoGetIcon(IntPtr handle, out string path);
        //int app_info_get_icon (app_info_h app_info, char **path)

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_info_get_package", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppInfoGetPackage(IntPtr handle, out string package);
        //int app_info_get_package (app_info_h app_info, char **package)

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_info_get_type", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppInfoGetType(IntPtr handle, out string type);
        //int app_info_get_type (app_info_h app_info, char **type)

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_info_get_app_component_type", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppInfoGetAppComponentType(IntPtr handle, out AppInfoAppComponentType type);
        //int app_info_get_app_component_type(app_info_h app_info, app_info_app_component_type_e *type)

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_info_foreach_metadata", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppInfoForeachMetadata(IntPtr handle, AppInfoMetadataCallback callback, IntPtr userData);
        //int app_info_foreach_metadata(app_info_h app_info, app_info_metadata_cb callback, void *user_data)

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_info_is_nodisplay", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppInfoIsNodisplay(IntPtr handle, [MarshalAs(UnmanagedType.U1)] out bool noDisplay);
        //int app_info_is_nodisplay (app_info_h app_info, [MarshalAs(UnmanagedType.U1)] bool *nodisplay)

        [LibraryImport(Libraries.AppManager, EntryPoint = "app_info_is_equal", StringMarshalling = StringMarshalling.Utf8)]
        internal static partial ErrorCode AppInfoIsEqual(IntPtr first, IntPtr second, [MarshalAs(UnmanagedType.U1)] out bool equal);
        //int app_info_is_equal (app_info_h lhs, app_info_h rhs, [MarshalAs(UnmanagedType.U1)] bool *equal)
